--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -148,6 +148,7 @@ user_info.roleApplicant=Applicant
 user_info.roleEmployee=Employee
 user_info.roleAdmin=Admin
 user_info_change_user_role_modal.selectRole=Select user role
+user_info.role=Role
 user_deleted=(blocked)
 
 table_action=Action
